# HackTh_Digiservices

./: DigiSerivces_Presentation_4_Oct_2021.odp  Digiservices Platform Vision.odt  Front_end.webm  Fund8_Proposal.md  README.md  WP Digiservices 17 Aug 2021 v1.odt
Front_End/: alice-and-bob.odt
backend/: LICENSE  README.md  REFERENCE.md  cabal.project  digi-services.cabal  hie.yaml
backend/src/Membership/: Account.hs  Contract.hs  Logic.hs  PlatformSettings.hs  Service.hs  ShameToken.hs  Signature.hs  Utils.hs
backend/src/Membership/OffChain/: Account.hs  Contract.hs  Logic.hs  Utils.hs
backend/src/Membership/OnChain/: Account.hs  Contract.hs  Logic.hs  ShameToken.hs  Signature.hs  Utils.hs
backend/test/Spec/: Example.hs  Run.hs  Sample.hs  Trace.hs
